/*
 * $Id: ChangeLog,v 1.2784 2004/04/14 15:06:04 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-14 02:48 UTC-0400 Sylvain Robert (s.robert/at/videotron.ca)
  * source/rtl/filesys.c
    - remove __USE_INLINE__ define and static definition for
      LongToHandle() and HandleToLong()
    + add && ! Defined(_BASETSD_H_) for the inline definition
    Now I can compile filesys.c with HB_WIN32_IO and MSVC

2004-04-14 16:25 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/gtwin/gtwin.c
    * modified readKey code to use only inkey.ch
    * no more support of INKEY_RAW and INKEY_EXTENDED
  * source/rtl/inkey.c
  * source/vm/hvm.c
    * hbinkey.ch no more used
  * source/rtl/gtwvt/gtwvt.c
    * added an hack to manage K_CTRL_RETURN
    * fixed support of keystrokes like Ctrl+Shift+F1 as suggested by Budyanto Dj.
  * source/rtl/filesys.c
    * fixed shared mode when -DHB_WIN32_IO as suggested by Przemyslaw.

2004-04-14 12:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbcmd.c
    * fixed bug in DBCREATE(....,.t.)

  * xharbour/include/hbdefs.h
    + added HB_COUNTER and HB_PTRDIFF types - first for reference
      counters and second for any pointer differences and pointer to
      integer conversions - this modification is synced with Harbour

  * xharbour/include/hbvmpub.h
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rtl/trim.c
  * xharbour/source/vm/arrays.c
  * xharbour/source/vm/debug.c
  * xharbour/source/vm/fastitem.c
  * xharbour/source/vm/fm.c
  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/memvars.c
    * use HB_COUNTER type

2004-04-13 14:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvm.h
  * source/vm/hvm.c
    + Added HB_EXPORT void hb_vmPushBaseArray( PHB_BASEARRAY pBaseArray );
